--- a/landingPage.css
+++ b/landingPage.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0px;
     border: 0px;
@@ -53,6 +57,7 @@ body {
     padding: 50px;
     display: flex;
     text-align: left;
+    justify-content: center;
 }
 
 .text {
@@ -99,3 +104,86 @@ body {
     width: auto;
     background: grey;
 }
+
+/* Info */
+
+.info {
+    padding: 0px 50px 20px 50px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header h1 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+.card .box {
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+}
+
+.card p {
+    width: 150px;
+    height: auto;
+    text-align: center;
+    font-size: 16px;
+    color: #1f2937;
+    margin: 0px auto;
+    padding-top: 10px;
+}
+
+/* Quote */
+
+
+.quote-container {
+    height: 400px;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-container .box {
+    flex-basis: 750px;
+    padding: 50px 100px 50px 100px;
+}
+
+.quote {
+    opacity: 0.7;
+}
+
+.quote p{
+    font-size: 36px;
+    font-weight: 100;
+    margin: 0px;
+}
+
+.author {
+    padding-right: 50px;
+    margin: 0px;
+    align-items: right;
+}
+
+.author p {
+    text-align: right;
+    margin: 0px;
+    font-size: 24px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+
+
